--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                     <div
                         class="nested-dropdown-content"
                     >
-                        <a href="#"
+                        <a href="sub1_1.html"
                             >Submenu 1.1</a
                         >
-                        <a href="#"
+                        <a href="sub1_2.html"
                             >Submenu 1.2</a
                         >
-                        <a href="#"
+                        <a href="sub1_3.html"
                             >Submenu 1.3</a
                         >
                     </div>
