--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+<head>
 <html>
 <title>index.html</title>
+</head>
 <body>
 
-    <iframe src="menu.html" width="100%" name="menu" target="main" style="height: 50px; w>
+    <iframe src="menu.html" width="100%" name="menu" target="main" style="height: 50px; width: 100%></iframe>
         <br>
-    <iframe src="main.html" width="100%" name="main" style="position: absolute; height: 94%; widt>
+    <iframe src="main.html" width="100%" name="main" style="position: absolute; height: 94%; width: 99%></iframe>
 
 </body>
 </html>
