--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-<title>index.html</title>
-</head>
-
 <body>
 
+<h1>Index</h1>
+<p>Index HTML Page
+
     <iframe src="menu.html" width="100%" name="menu" target="main" style="height: 50px; width: 100%></iframe>
-        <br>
     <iframe src="main.html" width="100%" name="main" style="position: absolute; height: 94%; width: 99%></iframe>
 
 </body>
-
 </html>
