--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <h1>Index</h1>
 <p>Index HTML Page</p>
 
-    <iframe src="menu.html" width="100%" name="menu" target="main" style="height: 50px; width: 100%></iframe>
-    <iframe src="main.html" width="100%" name="main" style="position: absolute; height: 94%; width: 99%></iframe>
+    <iframe src="/menu.html" width="100%" name="menu" target="main" style="height: 50px; width: 100%></iframe>
+    <iframe src="/main.html" width="100%" name="main" style="position: absolute; height: 94%; width: 99%></iframe>
 
 </body>
 </html>
