--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <body>
 
-<h1>Index</h1>
 <p>Index HTML Page</p>
 
-    <iframe src="/menu.html" width="100%" name="menu" target="main" style="height: 50px; width: 100%"></iframe>
-    <iframe src="/main.html" width="100%" name="main" style="position: absolute; height: 94%; width: 99%"></iframe>
+    <iframe src="/menu.html" width="100%" name="menu" target="content" style="height: 150px; width: 100%"></iframe>
+    <iframe src="/main.html" width="100%" name="content" style="position: absolute; height: 94%; width: 99%"></iframe>
 
 </body>
 </html>
