--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <body>
 
-<p>Index HTML Page</p>
+<!--#include virtual="/menu.html" -->
 
-    <iframe src="/menu.html" width="100%" name="menu" target="content" style="height: 150px; width: 100%"></iframe>
-    <iframe src="/main.html" width="100%" name="content" style="position: absolute; height: 94%; width: 99%"></iframe>
+test test
+that doesnt go away
+
+
 
 </body>
-</html>
+</html> 
